updated, not completed

--- a/tools/burner/Makefile
+++ b/tools/burner/Makefile
@@ -45,7 +45,7 @@ endif
 # OS
 ifeq ($(OS),Linux) #for Linux
 	LDFLAGS = -Wl,--export-dynamic -Wl,-rpath=$(LD_LIBRARY_PATH)
-	LDLIBS = -pthread -lrt -ldl -lm 
+	LDLIBS = -pthread -lrt -ldl -lm -lzmq
 	GTEST_LDLIBS = -lgtest
 endif
 
